# GoQuant

./: CMakeLists.txt  README.md
include/: http_server.hpp  matching_engine.hpp  order_book.hpp  order_types.hpp
include/api/: websocket_server.hpp
src/: main.cpp  matching_engine.cpp  order_book.cpp
src/api/: http_server.cpp  websocket_server.cpp
